--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:screenOrientation="unspecified"
-            android:theme="@style/LightTheme"
+            android:theme="@style/SplashTheme"
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
     </application>
