--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeLight">
-        <activity android:name=".ui.splash.SplashActivity">
+        <activity android:name=".ui.splash.SplashActivity"
+            android:theme="@style/SplashTheme"
+            android:fitsSystemWindows="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +22,6 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:screenOrientation="unspecified"
-            android:theme="@style/SplashTheme"
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
     </application>
