--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeLight">
         <activity android:name=".ui.splash.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:fitsSystemWindows="true">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
